--- a/appZapp/app/styles/components/swed-design/swed-design.scss
+++ b/appZapp/app/styles/components/swed-design/swed-design.scss
@@ -3,6 +3,13 @@ $hslSwed-NobleBlue:             212, 34%, 29%;
 $hslSwed-AccentBlue:            204, 22%, 55%;
 $hslSwed-AccentBlux:            226, 17%, 20%;
 
+$hslEg-Dark:                    220, 56%, 24%;
+$hslEg-Light:                   207, 57%, 75%;
+$hslEg-Highlight:               206, 57%, 95%;
+$hslEg-Accent:                   11, 86%, 63%;
+$hslEg-Reaccent:                207, 57%, 51%;
+$hslEg-Black:                   240, 15%, 12%;
+
 
 $colorSwedAccent:               hsl(212, 34%, 29%);
 $colorSwedAccent--text:         white;
