--- a/appZapp/app/styles/app.scss
+++ b/appZapp/app/styles/app.scss
@@ -26,9 +26,11 @@
     @import "components/group/group";
     @import "components/data-table/data-table";
 
-    @import "components/zetka/zetka--settings";
-    @import "components/zetka/zetka--constructor";
-    @import "components/zetka/zetka--layout";
+    //@import "components/zetka/zetka--settings";
+    //@import "components/zetka/zetka--constructor";
+    //@import "components/zetka/zetka--layout";
+
+    @import "components/article-grid/article-grid";
 
     @import "components/design-sakura/design-sakura";
 
