--- a/appZapp/app/styles/components/html-core/css-workers.scss
+++ b/appZapp/app/styles/components/html-core/css-workers.scss
@@ -1,6 +1,6 @@
 /* ==============================================================
     universal markup helpers
-    2019.4.17
+    2019.7.17
 ============================================================== */
 
 /* ------------------------------------------ univeral helpers */
@@ -40,8 +40,15 @@
 .text-is-smaller {
     font-size: 0.75em;
 }
+.text-is-larger {
+    font-size: 1.25em;
+}
 .text-is-bigger {
     font-size: 1.33333em;
+}
+
+.has-paddings {
+    padding: 1em;
 }
 
 
