--- a/appZapp/app/styles/app.css
+++ b/appZapp/app/styles/app.css
@@ -1627,6 +1627,12 @@ html[sakura], html.sakura {
   --hsl-CardBackground: 212, 34%, 29%;
   --hsl-ItemBackground: 204, 22%, 55%; }
 
+/* ------------------------------------- current-easing model */
+:root {
+  --timing-function--focusZoom: cubic-bezier(0.165, 0.84, 0.44, 1);
+  --timing-function--openJump: cubic-bezier(0.175, 0.885, 0.320, 1.275);
+  --timing-function--closeJump: cubic-bezier(0.600, -0.280, 0.735, 0.045); }
+
 /* ------------------------------------- current-color model */
 :root {
   --current-color--front: white;
@@ -1658,38 +1664,70 @@ html[sakura], html.sakura {
   --hsl-NobleWhite: 226, 27%, 90%;
   --hsl-NobleHighWhite: 226, 32%, 75%; }
 
-/* color model */
+/* color models */
 :root,
 .colors-as-primary {
   --background-color: hsl(var(--hsl-NobleBlack));
   --color: hsl(var(--hsl-NobleWhite));
-  --higlight-text: hsl(var(--hsl-NobleHighWhite));
-  --higlight-background: hsl(var(--hsl-AccentBlux)); }
+  --mark-text-color: hsl(var(--hsl-NobleHighWhite));
+  --mark-background-color: hsl(var(--hsl-AccentBlux)); }
 
 .colors-as-secondary {
   --background-color: hsl(var(--hsl-NobleBlue));
   --color: hsl(var(--hsl-NobleWhite));
-  --higlight-text: hsl(var(--hsl-NobleHighWhite)); }
+  --mark-text-color: hsl(var(--hsl-NobleHighWhite)); }
 
 .colors-as-highlight {
   --background-color: hsl(var(--hsl-AccentBlux));
   --color: hsl(var(--hsl-NobleWhite));
-  --higlight-text: hsl(var(--hsl-NobleHighWhite)); }
+  --mark-text-color: hsl(var(--hsl-NobleHighWhite)); }
 
 .colors-as-alternative {
   --background-color: hsl(var(--hsl-AccentBlue));
   --color: hsl(204, 0%, 0%);
-  --higlight-text: hsl(204, 0%, 0%); }
+  --mark-text-color: hsl(204, 0%, 0%); }
 
 .colors-as-special {
   --background-color: white;
   --color: black;
-  --higlight-text: firebrick; }
+  --mark-text-color: firebrick;
+  --mark-background-color: lightgray; }
 
 /* color workers */
 .color-box {
   background-color: var(--background-color);
   color: var(--color); }
+
+/* ------------------------------------- universal components */
+.albatross {
+  --albatross-full-min-width: 60em;
+  --albatross-item-min-width: 25%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
+  .albatross > * {
+    min-width: var(--albatross-item-min-width);
+    max-width: 100%;
+    flex-grow: 1;
+    flex-basis: calc( var(--albatross-full-min-width) * 999 - 100% * 999 ); }
+
+.jellyground {
+  position: relative; }
+  .jellyground::after {
+    content: "";
+    pointer-events: none;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--mark-background-color);
+    transition: all 800ms;
+    transition-timing-function: var(--timing-function--openJump);
+    will-change: transform; }
+  .jellyground:hover::after {
+    transform: scale(0.9, 1.2) translate(-15%, -10%); }
 
 /* ------------------------------------- unsorted components */
 .bg-aaa {
@@ -1709,17 +1747,6 @@ html[sakura], html.sakura {
 
 .swd-section .title + .title {
   color: black; }
-
-.albatross {
-  display: flex;
-  flex-wrap: wrap; }
-  .albatross > * {
-    min-width: 25%;
-    max-width: 100%;
-    flex-grow: 1;
-    flex-basis: calc( 60rem * 999 - 100% * 999 );
-    padding: 0.25rem 0.5rem;
-    background-color: hsl(var(--hsl-ItemBackground)); }
 
 .design-template--swed {
   background-color: #1a1a23;
