--- a/appZapp/app/styles/components/html-core/html-wrap.scss
+++ b/appZapp/app/styles/components/html-core/html-wrap.scss
@@ -16,8 +16,8 @@ html, body               { margin: 0; padding: 0;  }
 /* ------------------------------------ basic unit & font sizes */
 
 
-html { font-size: 10px; }
-body { font-size: 16px; line-height: 1.5; }
+html { /*font-size: 10px;*/ }
+body { /*font-size: 16px;*/ line-height: 1.5; }
 
 
 /* ------------------------------------ improve design & UX */
